﻿V.4 (alpha)

	Notice:
		Due to modified levels, all saves prior to this version will be erased

	New:
		Game editor: 
			The game now comes with its building editor in the "./Editor" folder
			For a complete tutorial of how it works, please refer to this video: YT link
			There is no Steam integration yet, and as a consequence, you can test only one building at a time
			The editor only works on Windows (for now)
		Basic workshop support:
			You can export and manually share levels
			If they are present in the "./Content/Workshop" folder, they will appear in the game workshop menu
			There is no Steam integration yet

	Fixes:
		Fixes Russian crashing on game over and level complete screens


V.3 (alpha)					29th June 2017

	Notice:
		Due to a new internal level structure, all saves prior to this version will be erased

	New:
		Tutorial levels and new or reworked levels
		3 new retiree sprites
		1 new nurse sprites
		1 new cop sprites

	Changes:
		Reworked MacOS and Linux runtime for better compatibility and performance.


V.2 (alpha)					2nd June 2017

	First public release