@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:d9f6e854c0ac0f833bf1400bd40434a5380c23440bf665f1066b092be23c631f
+oid sha256:5c595ca773646fa5d608dae13f4e383dc97e1a8a38345a26b2d90d61a069dd89
 size 329
